--- a/VRChat/64/1026264.html
+++ b/VRChat/64/1026264.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "O1lMy16bRS3GC7FbTpLN1bi7h0o5N1x+LGWZsq+L8gM="></script>
+    "ZDK+0YkqgPTFrH0BccifOFcLpCDq3tGRxOGkQmmkTCE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"彼岸花髪飾り","description":"彼岸花の3Dモデルです。\nVRChatのアバターの頭に髪飾りとして付けるために作成しました。\n改変、商用等、自由にご利用いただけます。\n\n2020/05/01\n英語対応してBlendファイルを2.8に更新\n\n2020/03/20\nマテリアル設定サンプルの画像が古くなっていたのでArktoon Shader版に変更しました","url":"https://booth.pm/ja/items/1026264","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1026264/57350610-8d09-4109-9c51-e2269ca44326_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O1lMy16bRS3GC7FbTpLN1bi7h0o5N1x+LGWZsq+L8gM="></script>
+    nonce="ZDK+0YkqgPTFrH0BccifOFcLpCDq3tGRxOGkQmmkTCE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1026264/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               316
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1026264/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               316
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
