updated at: 2023-04-25 19:57, VRChat向け　「パリピネイル」 - ヨコシマ工房 - BOOTH

--- a/VRChat/43/1026143.html
+++ b/VRChat/43/1026143.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cky2C7a2pE9VNDaI0jPJQKcY2eW3mKwHGokSyWxv0Uk="></script>
+    "+6agTVR+j7KgQTlQ7sfiQqokOxreH3LtnHiHBrjIwqM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　「パリピネイル」","description":"このネイルは主にVRChatでアバターに装着することを想定しています。\n\nポリゴン数は爪一枚あたり176ポリゴンです。\n\ntumeとtume saki部分が別オブジェクトなのでカラー分け可能、マテリアルにエミッションが入っているのでブルームのかかっているシーンでは光ります。\n\nそれぞれのオブジェクトに入っているシェイプキーで爪をとんがりモードにすることができます。アバターや指によって手の形状が違うので各自で比率を調節してご使用ください。\n\nクラブやパーティなどで映えます。","url":"https://booth.pm/ja/items/1026143","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1026143/1d4c3124-3bae-401e-b519-fafb3eabf2b6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cky2C7a2pE9VNDaI0jPJQKcY2eW3mKwHGokSyWxv0Uk="></script>
+    nonce="+6agTVR+j7KgQTlQ7sfiQqokOxreH3LtnHiHBrjIwqM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1026143/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               427
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1026143/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               427
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
