updated at: 2023-04-25 19:57, GP-EX とてもいらない刀 MK2 - nishikatsu創造出力所 - BOOTH

--- a/VRChat/97/1026097.html
+++ b/VRChat/97/1026097.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "oBf8D6cMPHGNc66r+b63MgQy6jme4eoBgwzS22yq7zs="></script>
+    "sXeUBUwu1nxgHZgwUf693v5Y9ESHIFOVvrf3Mhc6Eq4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GP-EX とてもいらない刀 MK2 ","description":"謎の素材で構成された刀\nテキトウに使ってね(色変え・改造OK)(配信・ゲームなどにしようもよし)\nでもそのままだったりただ改造しただけで売らないでね？\n12/18 ヴァアアアジョンツーにアップデートしました\nが、やってることはそこまで変わらずデザインとエミッション用のテクスチャがあるだけなのでご了承ください。\n\n\n2019/3/11　更に改良・追加した\n「GP-EX とてもいらない刀 MK2」\nMK2は有料版で500円で配布します\n無料配布版はver2が入ってます\nマテリアルはスタンダードシェーダーで入ってます\nマテリアルから自分好みの色にしてくれると嬉しいです。","url":"https://booth.pm/ja/items/1026097","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/434530f1-ffe2-4303-bcc0-8ff5f4bb9b0f/i/1026097/a845011d-2603-4ccc-831a-b1a7b87fbc4b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oBf8D6cMPHGNc66r+b63MgQy6jme4eoBgwzS22yq7zs="></script>
+    nonce="sXeUBUwu1nxgHZgwUf693v5Y9ESHIFOVvrf3Mhc6Eq4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1026097/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1026097/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
