updated at: 2023-04-25 19:57, SF風魔導杖（3Dモデル） - Megalo Arms corp. - BOOTH

--- a/VRChat/87/1025887.html
+++ b/VRChat/87/1025887.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ok0EpOPcO0zNJKYuTn+72nvoj8Gdyf/RCE3fqFcx6k8="></script>
+    "00gI9zCK4u+P2w5Q0sXarL7Y/kPPzUFCwu3VRqrVrcw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SF風魔導杖（3Dモデル）","description":"サイバーなデザインのスタッフの3Dモデルです。\n電子端末聖典付き。\nVRChatでのご使用を想定して制作していますがその他のコンテンツでもご利用可能です。\n聖典はボーン付きで開きの角度、スッタフはシェイプキーで長さや若干の形状変更が可能です。\n\n三角面数・844（合計）\nマテリアル数・2（本体・ディスプレイ部）","url":"https://booth.pm/ja/items/1025887","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/fd5759e4-ba4e-4d8b-95f2-d86f545aef0c/i/1025887/0936a5bb-1c9b-4e2d-8bd1-dd80ef2af39e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ok0EpOPcO0zNJKYuTn+72nvoj8Gdyf/RCE3fqFcx6k8="></script>
+    nonce="00gI9zCK4u+P2w5Q0sXarL7Y/kPPzUFCwu3VRqrVrcw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1025887/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               188
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1025887/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               188
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
