updated at: 2023-04-25 19:57, 【VRChat向け】VR Arm Gun - 腕装着型銃 - key-assets - BOOTH

--- a/VRChat/82/1025582.html
+++ b/VRChat/82/1025582.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "baBUxXG5Pf2I/fgDB8CdfY9H3OhQzek+hIjpCoVI4tQ="></script>
+    "oiBSZj9geuQ8x+WagsR8PrigJZF3bOgTA5Q476wtDuM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】VR Arm Gun - 腕装着型銃","description":"腕装着型近未来デザインの銃です！\n商品は3Dモデルです。\n実際のデータは、3DモデルがVRChatですぐ使えるように、UnityPackageになっています。","url":"https://booth.pm/ja/items/1025582","offers":{"priceCurrency":"JPY","@type":"Offer","price":"398"},"image":"https://booth.pximg.net/c/620x620/0b8c0ae5-9b47-4d8d-adcb-3d51a8fb4fb1/i/1025582/5b54bb0b-a237-4fa0-b061-48c3e04e58de_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="baBUxXG5Pf2I/fgDB8CdfY9H3OhQzek+hIjpCoVI4tQ="></script>
+    nonce="oiBSZj9geuQ8x+WagsR8PrigJZF3bOgTA5Q476wtDuM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1025582/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              20
+                              21
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1025582/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              20
+                              21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
