--- a/VRChat/23/1025523.html
+++ b/VRChat/23/1025523.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JdHG4mkk9HcZTwsLotKAqKbLmgcsW3TVkS2IxwuZSQQ="></script>
+    "x3TxbWUCadVgGSZkyIu8oVBrJdTjdKzNJ2+a+ytNhAY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"晶剣","description":"武器第2弾、今回は水晶をモチーフにした大剣です。サイズ変更すれば普通に剣としても使えるかもしれません。\n\n案の定アニメーション等はありませんが、その分テクスチャは割と頑張ってる方だと思います。特に柄の水晶部分。\nちょっとした工夫もしてあるので、是非実際に手に取って確認してみてください。\n\n今回も、シェーダーの一部にみに様のまんまるしぇーだーver1.2を使わせていただいています。ありがとうございます。\n\n\n仕様\n・ポリゴン数　△3346\n\n・メッシュ毎に基本テクスチャ1枚ずつ（計5枚）同梱。\n\n・Unity Package、FBXファイル、テクスチャ5枚、read meが入っています。\n\n9/26追記\nシェーダーを変更しました。透明感が増しています。\n\n以下、read meより転記\n\n\n利用規約\n当モデルは、Aliciaが作成した剣状の3Dオブジェクトです。\nVRChatやMMD等、ご自由にお使いください。\n\n・個人利用に限り自由。（収益化している動画に映り込む程度の事は問題ありません。）\n\n・テクスチャ、メッシュデータ等の改変利用自由。\n\n\n禁止事項\n\n・無断で当モデルを二次配布する事。商用利用の際はご連絡ください。\n\n・当モデルの製作者であると騙る事。\n\n\n当モデルの使用によって生じるいかなる損害に対して、当方は一切責任を負いません。\n\n何かご連絡、ご質問等がございましたら、以下のアドレスまでお願いします。\n\nGmail : alicia.wlcreation@gmail.com\nTwitter : @Alicia_oekaki","url":"https://booth.pm/ja/items/1025523","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/5043ac6d-805c-41e4-baa7-1837025294e9/i/1025523/93773287-cfb0-4c7d-a9b2-84d1b795f72e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JdHG4mkk9HcZTwsLotKAqKbLmgcsW3TVkS2IxwuZSQQ="></script>
+    nonce="x3TxbWUCadVgGSZkyIu8oVBrJdTjdKzNJ2+a+ytNhAY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1025523/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1025523/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
