--- a/VRChat/23/1025423.html
+++ b/VRChat/23/1025423.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IQREh5bQfO/FYGMcrrFARO/uUEyEbgmfIivBQC802e4="></script>
+    "u1ywjlX3PkXpiquJPRKRCcIg4SjdS1yu8r5gAJov+DM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター用アクセサリ】ハートの髪飾り STRAC002-H","description":"VRChatアバター用のハート型の髪飾りとして制作しましたが、服につけてオーナメントとして使うのもありかと思います。\n\n\n導入方法は、前作のピアスATRAC001-Eとほぼ同じですので\nそちらの導入説明書を参考にしてください。\n\n導入説明書は↓こちら\nhttp://toy-box.link/downloaddata/piercemanual.pdf\n\n\n◆仕様◆\n・ポリゴン数△304枚\n\n\n◆必須前提◆\nUnity(2017.4.15f1)\nVRChatSDK\n\n\n著作権は放棄していませんが、特に制限を設けようとも思いません。ご自由にお使い下さい。\nクレジット表記の必要はありませんが、紹介していただけると作者が喜びますw\n\nもし表記していただける場合は↓このように書いていただけると嬉しいです。\n\n作者名:『倭文』『しとり』『sitori』のいずれか\nTwitter:@toy_box_sitori\nHP：http://toy-box.link\n\n◆同梱データ◆\n\nモデルデータ(unityパッケージ)\n\n\n◆モデルに関する問題点やご指摘がありましたら◆\n\ntwitter: @toy_box_sitori\nメールアドレス: booth@toy-box.link\nまでご一報下さい。\n\n◆修正履歴◆\n\n◇2018.09.25◇\nVer.1.0.0 公開","url":"https://booth.pm/ja/items/1025423","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/1025423/6465a783-85c4-4956-b513-e3e70d9132f3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IQREh5bQfO/FYGMcrrFARO/uUEyEbgmfIivBQC802e4="></script>
+    nonce="u1ywjlX3PkXpiquJPRKRCcIg4SjdS1yu8r5gAJov+DM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1025423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               362
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1025423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               362
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
