--- a/VRChat/26/1025226.html
+++ b/VRChat/26/1025226.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OtZ2+nTIQZrfafZwhxDtWUz1wykb0MokjNri12U6TSI="></script>
+    "0IHuKYwH39JlJbgxTKh+iGxusuFx+gOUDvqoGHWP4rc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【¥0】 VRM Converter for VRChat","description":"※上手くいかない場合は、まず下の方にある使い方のQiita記事の手順通りに実行してみてください\n\n※インストール後、「VRM0」メニューが表示されない場合はUnityを再起動してください\n※エラーが出ているプロジェクトでは、インストーラーが動作しません\n\nEnglish README → https://www.store.vket.com/ec/items/122/detail/\n\nUnityのエディタ拡張です。次の3つのツールが含まれています。\n\n• VRMプレハブをVRChat用アバターへ変換\n• VRChat用アバターをVRMへ変換\n• メッシュ・サブメッシュの結合","url":"https://booth.pm/ja/items/1025226","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/ba01b0da-9d0b-4dd8-a9ad-3f35270de1c8/i/1025226/c639ada2-329a-4f94-9545-9d3eb2ace96e_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OtZ2+nTIQZrfafZwhxDtWUz1wykb0MokjNri12U6TSI="></script>
+    nonce="0IHuKYwH39JlJbgxTKh+iGxusuFx+gOUDvqoGHWP4rc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,10 +174,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1025226/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              7287
+                              7303
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1025226/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              7287
+                              7303
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
