--- a/VRChat/33/1025233.html
+++ b/VRChat/33/1025233.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5jnpwc6xtsl+zYvHiHfZ8qN7ZJxX9FcUggQMEurAKSg="></script>
+    "hrCCFbEo7NFL1TAjXAl5TTqYGn6m5ZuOTs6GuyfvCbY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　「パンプキンキャンディ＆ステッキ」","description":"先日配布したジャック・オー・ランタンのポリゴン数を削り、キャンディにしました。\n\nこのパンプキンキャンディ＆ステッキは主にVRChatでアバターに装着することを想定しています。\n\nポリゴン数は790です。\n\nstickのオブジェクトに入っているシェイプキーでキャンディモードからステッキモードに切り替え可能です。\n\nカボチャの外側と目、口の部分のオブジェクトが分かれているので質感を変えて目と口の部分のみ暗い所やブルームのかかっているシーンで光らせることができます。\n","url":"https://booth.pm/ja/items/1025233","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1025233/a1f4617b-15e0-4a8c-8d93-24ffe097bb4e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5jnpwc6xtsl+zYvHiHfZ8qN7ZJxX9FcUggQMEurAKSg="></script>
+    nonce="hrCCFbEo7NFL1TAjXAl5TTqYGn6m5ZuOTs6GuyfvCbY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1025233/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1025233/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
