--- a/VRChat/34/1025034.html
+++ b/VRChat/34/1025034.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PP+xvyZ0cPQbFWpPel+WmEyQUAZHMLS+a8RFrMpvN7M="></script>
+    "oAIpRxoj11gquMU3ZliCgrOYXa4P3AizeBfXEA6HPZE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル「魔導式破砕鎌：壱式」","description":"オリジナル3Dモデル「魔導式破砕鎌：壱式」紹介文及び利用規約\n\n使用者は配布モデルの利用に先立ち、当規約の内容全てに同意をした上で配布物を利用可能なものといたします。\nまた、本モデルデータを購入をした時点で利用規約に同意したものとみなします。\n\n内容物：\n・scythe.fbx\n1メッシュで構成されているモデルデータです。三角ポリゴン数：3914\n\n・魔導式破砕鎌：壱式_prefab\nUnityのシーン上にD\u0026Dをするだけでマテリアルの設定等が完了しているモデルが配置できます。\nデフォルトで刃が回転しているので止めたい方はAnimationコンポーネントのチェックを外してください。\n\n・scythe_DefaultMaterial_AlbedoTransparency.png\n・scythe_DefaultMaterial_MetallicSmoothness.png\n・scythe_DefaultMaterial_Normal.png\n・scythe.mat\nそれぞれのテクスチャとマテリアルです。\n\n・Rotate.anim\n刃を回転させているアニメーションです。blendshape式\n\n・Readme.txt\n本ページに記載している文と同じtxtファイルです。","url":"https://booth.pm/ja/items/1025034","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1025034/80f6d726-61b0-4c9f-bf59-5499c3cabf06_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PP+xvyZ0cPQbFWpPel+WmEyQUAZHMLS+a8RFrMpvN7M="></script>
+    nonce="oAIpRxoj11gquMU3ZliCgrOYXa4P3AizeBfXEA6HPZE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1025034/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               161
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1025034/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               161
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
