--- a/VRChat/76/1024876.html
+++ b/VRChat/76/1024876.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PpdZZ/rz/upy8X+WA8EFPitOFhFgX+L9pT3nHROurbk="></script>
+    "XXD0hber78hk7F2t+WNyFhdUGzR9mk19JSYTpZ6RMkg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"腕章 3Dモデル","description":"腕章 3Dモデル 紹介文\n\n\n本モデルは【VRChat】向けに作成した腕章です。\nイベントスタッフの方などにおすすめです。\n\n●内容物\n・腕章.unitypackage\n・モデル、テクスチャ\n・Readme\n\n★【VRChat向け】腕章を回転させたい\n\n腕などに付けた腕章を回転させたい場合は以下の記事を参考にUnityでアニメーション設定を加えてください。\n\nhttp://keiki002.com/vr/move_anime/\n\n\n------------------------------\n\n●利用条件\n・本モデルの営利利用目的は可\n・本モデルの改変は可\n\n●免責事項\n・本データを使用し、何れかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n\n●禁止事項\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n------------------------------\n\n貧相なモデルですが使っていただければ嬉しく思います。\n\n何かあれば下記までご連絡ください。\nTwitter:ケーキ@VRChatter(@keiki002)\nhttps://twitter.com/keiki002","url":"https://booth.pm/ja/items/1024876","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1024876/7a6b0f10-b0e3-4f94-838b-9e1d6a9f601f_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PpdZZ/rz/upy8X+WA8EFPitOFhFgX+L9pT3nHROurbk="></script>
+    nonce="XXD0hber78hk7F2t+WNyFhdUGzR9mk19JSYTpZ6RMkg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1024876/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               144
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1024876/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               144
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
