updated at: 2023-04-25 19:59, 【無料】【VRChat】いわゆるぺろぺろキャンディー - 仮想DustBox.-Virtual DustBox- - BOOTH

--- a/VRChat/20/1024920.html
+++ b/VRChat/20/1024920.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Ss8MOoRx3+XFWTsaEOcI46wNj8hpVqyrRq5hN6q3BUE="></script>
+    "SxItVydoMjCqdJoMh0rOvYA2bIbjkhp5DPhh93jVPx0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】【VRChat】いわゆるぺろぺろキャンディー","description":"普通のペロキャンです\nもちろん趣味で変形します\n①剣\n②ハンマー\n③大鎌？\n\nサンプルシーンからコピペして\nFixedJointの接続先を手のRigfybodyに設定後\nアニメーションオーバーライドの設定で使用可能。\nハロウィンにでも装備しようと思います。\n\n※改変なし有料再配布はやめてください。\n\n2018-10-17\n・sceneをprefabに更新","url":"https://booth.pm/ja/items/1024920","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2e38c3c4-71ff-4201-8d0d-11df6e2b715b/i/1024920/ab76f32a-48e1-4229-a448-7c9645d0f80f_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ss8MOoRx3+XFWTsaEOcI46wNj8hpVqyrRq5hN6q3BUE="></script>
+    nonce="SxItVydoMjCqdJoMh0rOvYA2bIbjkhp5DPhh93jVPx0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -138,6 +138,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -182,7 +184,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1024920/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
@@ -197,14 +199,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1024920/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
