updated at: 2023-04-25 20:00, 自立駆動形サブアーム - virtualgaroth - BOOTH

--- a/VRChat/35/1024435.html
+++ b/VRChat/35/1024435.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OOerTSw7ZlEZEf00B2iQHJ1XH0T8t58lfMMk265DjeU="></script>
+    "qkSHzabwagKFVPHH9dY9i/ANtIrR10OglIuHqRT67NQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"自立駆動形サブアーム","description":"●仕様\nこの製品は右上あたりで追従してくれそうな3Dモデルです。\n\n格納型と換装型の2種類用意しています。\n\n換装型のサブアームはボーン、オブジェクトが別なので既存の3Dモデルに流用できます。\n\nhumanoidモデルに追従させる場合はhipsボーンに入れると簡単に追従してくれます\n\n・格納型のアニメーションファイルについて\n\n格納型の変形アニメーションはblenderで制作したものを収納しております。\nunityで変形を行いたい場合は参考図の位置にあるアニメーションファイル[1]を活用ください。\n変形ができない場合はunityで新規に作成したアニメーションに[1]の中身を丸コピしてください。\n\n●商業利用\n本データのR-18への利用や改変については自由です。\nまた、営利目的での利用も可能です。ゲーム等ご自由にお使いください。\nこのモデルを利用した作品を制作した場合は連絡を下されば大変喜びます。\n\n●禁則事項\n本データの改変が可能な状態での販売は禁止します。\n本データを利用したことによる損害に対する責任は負わないものとします。\nまた、特定個人や団体への中傷を目的とした利用を禁止します。\n本データ及びその改変モデルの著作権については大本の製作者である ガロス に帰属します。","url":"https://booth.pm/ja/items/1024435","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/1024435/e7bf13d4-c259-473e-86eb-0868bb0c2f31_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OOerTSw7ZlEZEf00B2iQHJ1XH0T8t58lfMMk265DjeU="></script>
+    nonce="qkSHzabwagKFVPHH9dY9i/ANtIrR10OglIuHqRT67NQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1024435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1024435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
