updated at: 2023-04-25 20:00, 【VRChat向け】 ポーション瓶 - NullPointerExplorer - BOOTH

--- a/VRChat/24/1023624.html
+++ b/VRChat/24/1023624.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KYkRajHA3NKWdeX5jG8KU6uL8ealM/edDhGkAuFUZBg="></script>
+    "3/Ida1rcIplg5/mCuK2qmQ6a8XRqbZg1IEJxCmCs+Xs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】 ポーション瓶","description":"某ゲーム風のポーション入り瓶です。△2568ポリゴン\n瓶と蓋、中身は別パーツです(中身は揺れません)。\nマテリアルの色を変更する事により2枚目の様に内容物を変えられます。\n\nStandardShaderを使用しておりますがFreeMatcapShader等をお使い頂くと\nより一層質感が増すかと思われます。（当品には同梱していません）\n\n【内容物】\n・Unitypackage　・FBXファイル　・Readme\n\n【利用規約】\n　【許可事項】\n　　・改変\n　　・R-18、R-18G表現\n　　・VRChat以外の媒体への使用\n　　　（VirtualCast配信、動画・配信による撮影、ゲーム内組み込み等）\n　　・VRChat内アバターペデスタルへの配置\n　\n　【禁止事項】\n　　・全年齢、R18問わず商用利用\n　　・データを取り出せる状態での二次配布（無改変・改変済問わず）\n　　・自作発言\n　　・誹謗中傷、政治的、宗教的、その他公序良俗に反する目的での使用\n\n本データを使用した事により発生した問題、損失について配布元は一切の責任を負いません。\nまた本データをご利用頂いた時点で利用規約に同意したものとみなします。","url":"https://booth.pm/ja/items/1023624","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5f6402dd-f6b1-4103-93e7-d6b0c9bb807c/i/1023624/7a219754-b41a-4c37-bc52-fd8729f07b96_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KYkRajHA3NKWdeX5jG8KU6uL8ealM/edDhGkAuFUZBg="></script>
+    nonce="3/Ida1rcIplg5/mCuK2qmQ6a8XRqbZg1IEJxCmCs+Xs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1023624/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               251
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1023624/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               251
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
