updated at: 2023-04-25 20:03, VRChat向けBlenderアドオン - kumatta_ss - BOOTH

--- a/VRChat/68/1020668.html
+++ b/VRChat/68/1020668.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3e8wysv9lFrzt0fw189P8izDl9koiZF93G1GLbe5zs8="></script>
+    "laXvEoVFVYRCk6Ur9IMV9HS3CNH3BWZTYG5x6F/aVjY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けBlenderアドオン","description":"■対応バージョン\nBlender 2.93以降（2.93、3.1.2で動作確認）\n\n\nVRChat用のモデルデータの補正を、補助するツールです。\n\n機能一覧\n・ボーン名の部分置換（前方一致、後方一致、完全一致、正規表現）\n・シェイプキーに「vrc.」を一括付与\n・Maya キッシュ v.2系のfbxデータ補完\n\n\n使用方法は下記を参照\nhttps://github.com/Himakuma/blender-vrc-tools","url":"https://booth.pm/ja/items/1020668","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3a45aa53-22ce-4e64-972f-6d9cec0b3557/i/1020668/def59d77-1bc7-4f7c-a977-d07ba44fa47b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3e8wysv9lFrzt0fw189P8izDl9koiZF93G1GLbe5zs8="></script>
+    nonce="laXvEoVFVYRCk6Ur9IMV9HS3CNH3BWZTYG5x6F/aVjY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1020668/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              769
+                              770
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1020668/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              769
+                              770
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
